--- a/config.ini
+++ b/config.ini
@@ -1,4 +1,4 @@
-Debug = false
+Debug = true
 Port  = 12345
 
 [SQLServer]
@@ -14,3 +14,9 @@ Loc      = Local
 Address  = 127.0.0.1:6379
 Password = 
 DB       = 0
+
+[TelegramBot]
+Enable   = true
+BotToken = 5464030415:AAGDcLpTcYiYaj17P2Syg0iq2h7SKWSz6uw
+; 支持user, group, chanel, 以逗号隔开
+NotifyID = 461283020
