--- a/config.ini
+++ b/config.ini
@@ -1,5 +1,7 @@
-Debug = true
-Port  = 12345
+Debug     = true
+Port      = 12345
+; 不填会随机生成
+SecretKey = 1b00fa8b-be51-49a4-ba10-b5952d30bad3
 
 [SQLServer]
 IP       = 127.0.0.1
@@ -12,11 +14,22 @@ Loc      = Local
 
 [RedisServer]
 Address  = 127.0.0.1:6379
+; 未设密码可直接不填
 Password = 
 DB       = 0
 
 [TelegramBot]
 Enable   = true
+; TelegramBot的Token，不需要带前缀bot'
 BotToken = 5464030415:AAGDcLpTcYiYaj17P2Syg0iq2h7SKWSz6uw
 ; 支持user, group, chanel, 以逗号隔开
 NotifyID = 461283020
+
+[Watcher]
+Enable      = false
+; 0-100，支持小数点
+CPUPercent  = 80
+; 0-100，支持小数点
+MemPercent  = 80
+; 0-100，支持小数点
+DiskPercent = 0
