--- a/config.ini
+++ b/config.ini
@@ -1,7 +1,9 @@
-Debug     = true
-Port      = 12345
+Debug          = true
+Port           = 12345
 ; 不填会随机生成
-SecretKey = 1b00fa8b-be51-49a4-ba10-b5952d30bad3
+SecretKey      = 1b00fa8b-be51-49a4-ba10-b5952d30bad3
+; 记录的间隔(粒度)，单位分钟
+RecordInterval = 5
 
 [SQLServer]
 IP       = 127.0.0.1
@@ -19,7 +21,7 @@ Password =
 DB       = 0
 
 [TelegramBot]
-Enable   = true
+Enable   = false
 ; TelegramBot的Token，不需要带前缀bot'
 BotToken = 5464030415:AAGDcLpTcYiYaj17P2Syg0iq2h7SKWSz6uw
 ; 支持user, group, chanel, 以逗号隔开
