--- a/config.ini
+++ b/config.ini
@@ -21,7 +21,7 @@ Password =
 DB       = 0
 
 [TelegramBot]
-Enable   = false
+Enable   = true
 ; TelegramBot的Token，不需要带前缀bot'
 BotToken = 5464030415:AAGDcLpTcYiYaj17P2Syg0iq2h7SKWSz6uw
 ; 支持user, group, chanel, 以逗号隔开
